--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="apple-touch-icon" sizes="144x144" href="../dest/img/favicons/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="../dest/img/favicons/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../dest/img/favicons/apple-touch-icon-180x180.png">
-    <link rel="stylesheet" href="../dest/styles/main.min.css">
-    <link rel="stylesheet" href="../dest/styles/swiper.css">
+    <link rel="stylesheet" href="styles/main.min.css">
+    <link rel="stylesheet" href="styles/swiper.css">
     <!--[if lt IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
         <![endif]-->
@@ -130,10 +130,10 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please
             <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <script src="../dest/js/jquery.min.js"></script>
-    <script src="../dest/js/swiper.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     
-    <script src="../dest/js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
